--- a/.github/workflows/build_slc.yaml
+++ b/.github/workflows/build_slc.yaml
@@ -16,7 +16,7 @@ jobs:
      - name: Setup Python & Poetry Environment
        uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
        with:
-         python-version: '${{ matrix.python_version }}'
+         python-version: '3.10'
          poetry-version: '2.1.2'
      - name: Detect runner
        id: detect-runner
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Python & Poetry Environment
         uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
         with:
-          python-version: '${{ matrix.python_version }}'
+          python-version: '3.10'
           poetry-version: '2.1.2'
       - name: Check space on disk
         run: df
