--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Python & Poetry Environment
         uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
         with:
-          python-version: '${{ matrix.python_version }}'
+          python-version: '3.10'
           poetry-version: '2.1.2'
       - id: set-matrix
         run: |
