1. Added test-set for linker namespace tests 2. Added nox task run-db-test

--- a/.github/workflows/test_slc.yaml
+++ b/.github/workflows/test_slc.yaml
@@ -39,10 +39,10 @@ jobs:
      - name: Detect Test runner
        id: detect-test-sets
        run: |
-         TEST_SETS=$(poetry run nox -s "get-test-sets-for-flavor(flavor='${{ inputs.flavor }}')")
-         echo "test_sets=$TEST_SETS" >> "$GITHUB_OUTPUT"
+         TEST_SETS=$(poetry run nox -s "get-test-set-names-for-flavor(flavor='${{ inputs.flavor }}')")
+         echo "test_set_names=$TEST_SETS" >> "$GITHUB_OUTPUT"
     outputs:
-     test-sets: ${{ steps.detect-test-sets.outputs.test_sets }}
+     test-sets: ${{ steps.detect-test-sets.outputs.test_set_names }}
 
   run-tests:
     needs: [detect-test-runner, detect-test-sets]
