--- a/.github/workflows/test_slc.yaml
+++ b/.github/workflows/test_slc.yaml
@@ -65,9 +65,6 @@ jobs:
         with:
           name: slc_${{inputs.flavor}}
           path: "slc"
-
       - name: Run Test-Set ${{ matrix.test-set.name }}
         run: |
-          #poetry run nox -s run-db-tests -- --flavor "${{ inputs.flavor }}" --test-set-name ${{ matrix.test-set }}
-          echo "Download path is ${{ steps.download-slc.outputs.download-path }}"
-          ls "${{ steps.download-slc.outputs.download-path }}"
+          poetry run nox -s run-db-tests -- --flavor "${{ inputs.flavor }}" --test-set-name ${{ matrix.test-set }} --slc-directory "${{ steps.download-slc.outputs.download-path }}"
