--- a/.github/workflows/build_slc.yaml
+++ b/.github/workflows/build_slc.yaml
@@ -14,14 +14,14 @@ jobs:
     steps:
      - uses: actions/checkout@v4
      - name: Setup Python & Poetry Environment
-       uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
+       uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
        with:
          python-version: '3.10'
          poetry-version: '2.1.2'
      - name: Detect runner
        id: detect-runner
        run: |
-         RUNNER=$(poetry run nox -s "get-build-runner-for-flavor(flavor='${{ inputs.flavor }}')")
+         RUNNER=$(poetry run -- nox -s "get-build-runner-for-flavor(flavor='${{ inputs.flavor }}')")
          echo "runner=$RUNNER" >> "$GITHUB_OUTPUT"
     outputs:
      runner: ${{ steps.detect-runner.outputs.runner }}
@@ -32,7 +32,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
         with:
           python-version: '3.10'
           poetry-version: '2.1.2'
