--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,13 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
         with:
           python-version: '3.10'
           poetry-version: '2.1.2'
       - id: set-matrix
         run: |
-          FLAVORS=$(poetry run nox -s get-flavors)
+          FLAVORS=$(poetry -- run nox -s get-flavors)
           echo "matrix=$FLAVORS" >> "$GITHUB_OUTPUT"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
