--- a/.github/workflows/test_slc.yaml
+++ b/.github/workflows/test_slc.yaml
@@ -15,14 +15,14 @@ jobs:
     steps:
      - uses: actions/checkout@v4
      - name: Setup Python & Poetry Environment
-       uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
+       uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
        with:
          python-version: '3.10'
          poetry-version: '2.1.2'
      - name: Detect Test runner
        id: detect-test-runner
        run: |
-         RUNNER=$(poetry run nox -s "get-test-runner-for-flavor(flavor='${{ inputs.flavor }}')")
+         RUNNER=$(poetry run -- nox -s "get-test-runner-for-flavor(flavor='${{ inputs.flavor }}')")
          echo "runner=$RUNNER" >> "$GITHUB_OUTPUT"
     outputs:
      runner: ${{ steps.detect-test-runner.outputs.runner }}
@@ -32,14 +32,14 @@ jobs:
     steps:
      - uses: actions/checkout@v4
      - name: Setup Python & Poetry Environment
-       uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
+       uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
        with:
          python-version: '3.10'
          poetry-version: '2.1.2'
      - name: Detect Test runner
        id: detect-test-sets
        run: |
-         TEST_SETS=$(poetry run nox -s "get-test-set-names-for-flavor(flavor='${{ inputs.flavor }}')")
+         TEST_SETS=$(poetry run -- nox -s "get-test-set-names-for-flavor(flavor='${{ inputs.flavor }}')")
          echo "test_set_names=$TEST_SETS" >> "$GITHUB_OUTPUT"
     outputs:
      test-sets: ${{ steps.detect-test-sets.outputs.test_set_names }}
@@ -55,7 +55,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@0.20.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
         with:
           python-version: '${{ matrix.python_version }}'
           poetry-version: '2.1.2'
@@ -67,4 +67,4 @@ jobs:
           path: "slc"
       - name: Run Test-Set ${{ matrix.test-set.name }}
         run: |
-          poetry run nox -s run-db-tests -- --flavor "${{ inputs.flavor }}" --test-set-name ${{ matrix.test-set }} --slc-directory "${{ steps.download-slc.outputs.download-path }}"
+          poetry run -- nox -s run-db-tests --flavor "${{ inputs.flavor }}" --test-set-name ${{ matrix.test-set }} --slc-directory "${{ steps.download-slc.outputs.download-path }}"
