--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/release/Dockerfile
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/release/Dockerfile
@@ -63,6 +63,8 @@ RUN true # workaround for https://github.com/moby/moby/issues/37965
 COPY --from={{build_run}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
+COPY language_definitions.json /build_info/language_definitions.json
+RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 RUN mkdir -p /build_info/actual_installed_packages/release && \
     /scripts/list_installed_scripts/list_installed_apt.sh > /build_info/actual_installed_packages/release/apt_get_packages && \
