--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
           poetry-version: '2.1.2'
       - id: set-matrix
         run: |
-          FLAVORS=$(poetry -- run nox -s get-flavors)
+          FLAVORS=$(poetry -- run nox -s ci:find-available-flavors)
           echo "matrix=$FLAVORS" >> "$GITHUB_OUTPUT"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -30,7 +30,8 @@ jobs:
       fail-fast: true
       matrix:
         flavor: ${{fromJson(needs.get-flavors.outputs.matrix)}}
-    uses: ./.github/workflows/ci_flavor.yaml
+    uses: ./.github/workflows/slc_ci/ci_flavor.yaml
     with:
       flavor: ${{ matrix.flavor }}
+    secrets: inherit
 
