--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ keywords = ['exasol', 'udf', 'script-languages']
 
 [tool.poetry]
 
-package-mode = false
+packages = [
+    {include = "README.md"},
+    {include = "LICENSE"},
+    {include = "exasol"},
+]
 
 [project.urls]
 repository = "https://github.com/exasol/script-languages"
@@ -26,8 +30,9 @@ homepage = "https://github.com/exasol/script-languages"
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
 exasol-script-languages-container-tool = "^3.1.0"
-exasol-script-languages-container-ci = "^1.8.0"
-exasol-script-languages-container-ci-setup = "^1.8.0"
+#exasol-script-languages-container-ci = {path="/home/thomas/Work/script-languages-container-ci/dist/exasol_script_languages_container_ci-1.8.0-py3-none-any.whl"}
+exasol-script-languages-container-ci = {git="https://github.com/exasol/script-languages-container-ci", branch="feature/75_implement_ci_for_gh_workflows"}
+
 
 [tool.poetry.group.dev.dependencies]
 toml = ">=0.10.2"
