--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,9 @@ jobs:
       - id: set-matrix
         run: |
           FLAVORS=$(poetry -- run nox -s ci:find-available-flavors)
+          echo ------------------------------
+          echo $FLAVORS
+          echo ------------------------------
           echo "matrix=$FLAVORS" >> "$GITHUB_OUTPUT"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -30,9 +33,7 @@ jobs:
       matrix:
         flavor: ${{fromJson(needs.get-flavors.outputs.matrix)}}
     uses: ./.github/workflows/ci_flavor.yaml
-    secrets:
-      DOCKER_USERNAME: '${{ secrets.DOCKER_USERNAME }}'
-      DOCKER_PASSWORD: '${{ secrets.DOCKER_PASSWORD }}'
+    secrets: inherit
     with:
       flavor: ${{ matrix.flavor }}
 
