--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           echo ------------------------------
           echo $FLAVORS
           echo ------------------------------
-          echo "matrix=$FLAVORS" >> "$GITHUB_OUTPUT"
+          echo matrix='$FLAVORS' >> "$GITHUB_OUTPUT"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
