--- a/.github/workflows/build_slc.yaml
+++ b/.github/workflows/build_slc.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Build SLC ${{ inputs.flavor }}
         id: build-slc
         run: |
-          slc_path=`poetry run -- nox -s "ci:export-and-scan-vulnerabilities" --flavor "${{inputs.flavor}}" --branch-name ${GITHUB_REF##*/} --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD" --commit-sha "${{ github.sha }}"`
+          slc_path=`poetry run -- nox -s "ci:export-and-scan-vulnerabilities" --flavor "${{inputs.flavor}}" --branch-name ${{github.ref_name}} --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD" --commit-sha "${{ github.sha }}"`
           echo "slc-path=$slc_path" >> $GITHUB_OUTPUT
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
