--- a/.github/workflows/ci_check_for_build.yaml
+++ b/.github/workflows/ci_check_for_build.yaml
@@ -17,16 +17,20 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
         with:
           python-version: "3.10"
           poetry-version: "2.1.2"
       - name: Run check
         id: run-check
         run: |
-          echo branch name is ${{github.ref_name}}
-          result = `poetry run -- nox -s  ci:check-if-build-need -- --flavor ${{ inputs.flavor }} --branch-name ${{github.ref_name}}`
+          echo ref_name name is ${{github.ref_name}}
+          echo head_ref is ${{github.head_ref}}
+          branch_name="${{github.head_ref || github.ref_name}}"
+          result = $(poetry run -- nox -s  ci:check-if-build-need -- --flavor ${{ inputs.flavor }} --branch-name "$branch_name")
           echo "continue=$result" >> $GITHUB_OUTPUT
 
     outputs:
