--- a/.github/workflows/ci_check_for_build.yaml
+++ b/.github/workflows/ci_check_for_build.yaml
@@ -18,9 +18,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: master
-      - uses: actions/checkout@v4
-        with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
         uses: exasol/python-toolbox/.github/actions/python-environment@1.0.1
@@ -34,6 +31,7 @@ jobs:
           echo head_ref is ${{github.head_ref}}
           branch_name="${{github.head_ref || github.ref_name}}"
           echo resulting branch_name is $branch_name
+          git fetch
           result = $(poetry run -- nox -s  ci:check-if-build-need -- --flavor ${{ inputs.flavor }} --branch-name "$branch_name")
           echo "continue=$result" >> $GITHUB_OUTPUT
 
