--- a/.github/workflows/ci_build_slc.yaml
+++ b/.github/workflows/ci_build_slc.yaml
@@ -48,7 +48,7 @@ jobs:
         id: build-slc
         run: |
           slc_path=`poetry run -- nox -s "ci:export-and-scan-vulnerabilities" -- --flavor "${{inputs.flavor}}" --branch-name ${{github.ref_name}} --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD" --commit-sha "${{ github.sha }}"`
-          echo "slc-path=$slc_path" >> $GITHUB_OUTPUT
+          echo slc_path=$slc_path >> $GITHUB_OUTPUT
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -57,5 +57,5 @@ jobs:
         id: artifact-upload-step
         with:
           name: slc_${{inputs.flavor}}
-          path: "${{ steps.build-slc.outputs.slc-path }}"
+          path: "${{ steps.build-slc.outputs.slc_path }}"
           compression-level: 0
