Use latest slc-ci

--- a/.github/workflows/ci_build_slc.yaml
+++ b/.github/workflows/ci_build_slc.yaml
@@ -27,8 +27,7 @@ jobs:
      - name: Detect runner
        id: detect-runner
        run: |
-         RUNNER=$(poetry run -- nox -s "ci:get-build-runner-for-flavor" -- --flavor "${{ inputs.flavor }}")
-         echo "runner=$RUNNER" >> "$GITHUB_OUTPUT"
+         poetry run -- nox -s "ci:get-build-runner-for-flavor" -- --flavor "${{ inputs.flavor }}" --github-var runner
     outputs:
      runner: ${{ steps.detect-runner.outputs.runner }}
   build:
@@ -48,7 +47,7 @@ jobs:
         id: build-slc
         run: |
           branch_name="${{github.head_ref || github.ref_name}}"
-          poetry run -- nox -s "ci:export-and-scan-vulnerabilities" -- --flavor "${{inputs.flavor}}" --branch-name ${{github.ref_name}} --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD" --commit-sha "${{ github.sha }}" --github-output "$GITHUB_OUTPUT"
+          poetry run -- nox -s "ci:export-and-scan-vulnerabilities" -- --flavor "${{inputs.flavor}}" --branch-name ${{github.ref_name}} --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD" --commit-sha "${{ github.sha }}" --github-var slc_path
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
