--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,8 +18,7 @@ jobs:
           poetry-version: '2.1.2'
       - id: set-matrix
         run: |
-          FLAVORS=$(poetry -- run nox -s ci:find-available-flavors)
-          echo matrix=$FLAVORS >> "$GITHUB_OUTPUT"
+          poetry -- run nox -s ci:find-available-flavors -- --github-var matrix
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
