--- a/.github/workflows/ci_build_slc.yaml
+++ b/.github/workflows/ci_build_slc.yaml
@@ -53,8 +53,19 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
       - uses: actions/upload-artifact@v4
+        id: artifact-upload-logs-step
+        with:
+          name: logs_${{inputs.flavor}}
+          path: |
+            .build_output/jobs/**/*
+            .build_output/security_scan/**/*
+            .build_output/metadata/**/*
+          retention-days: 30
+
+      - uses: actions/upload-artifact@v4
         id: artifact-upload-step
         with:
           name: slc_${{inputs.flavor}}
           path: "${{ steps.build-slc.outputs.slc_path }}"
           compression-level: 0
+          retention-days: 7
