--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python = ">=3.10,<4"
 exasol-script-languages-container-tool = "^3.0.0"
 exasol-script-languages-container-ci = "^1.8.0"
 exasol-script-languages-container-ci-setup = "^1.8.0"
+exasol-integration-test-docker-environment = "4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 toml = ">=0.10.2"
