--- a/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/release/Dockerfile
+++ b/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/release/Dockerfile
@@ -4,7 +4,7 @@ ENV ENV_NAME="base"
 ENV MAMBA_ROOT_PREFIX="/opt/conda"
 ENV MAMBA_EXE="/bin/micromamba"
 
-RUN mkdir /conf /buckets
+RUN mkdir -p /conf /buckets /nvidia/driver /nvidia/utils
 
 COPY --from={{language_deps}} /usr /usr
 RUN true # workaround for https://github.com/moby/moby/issues/37965
