#1166: Update script-languages-container-ci

--- a/.github/workflows/slc_ci.yml
+++ b/.github/workflows/slc_ci.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
       - name: Setup Python & Poetry Environment
         uses: exasol/python-toolbox/.github/actions/python-environment@1.2.0
         with:
