--- a/.github/workflows/slc_ci_flavor.yml
+++ b/.github/workflows/slc_ci_flavor.yml
@@ -18,6 +18,7 @@ on:
       DOCKER_PASSWORD:
           required: true
 
+
 jobs:
   check_for_build:
     uses: ./.github/workflows/slc_ci_check_for_build.yml
@@ -25,7 +26,7 @@ jobs:
       flavor: ${{ inputs.flavor }}
 
   do_nothing:
-    if: ${{ needs.check_for_build.outputs.continue != 'True' }}
+    if: ${{ needs.check_for_build.outputs.result == 'no_build_needed' }}
     needs: [check_for_build]
     runs-on: ubuntu-24.04
     steps:
@@ -35,14 +36,15 @@ jobs:
   build:
     needs: check_for_build
     uses: ./.github/workflows/slc_ci_build_slc.yml
-    if: ${{ needs.check_for_build.outputs.continue == 'True' }}
+    if: ${{ needs.check_for_build.outputs.result != 'no_build_needed' }}
     with:
       flavor: ${{ inputs.flavor }}
+      build-mode: ${{ needs.check_for_build.outputs.result }}
     secrets: inherit
 
   test:
     needs: [check_for_build, build]
-    if: ${{ needs.check_for_build.outputs.continue == 'True' }}
+    if: ${{ needs.check_for_build.outputs.result != 'no_build_needed' }}
     uses: ./.github/workflows/slc_ci_test_slc.yml
     with:
       flavor: ${{ inputs.flavor }}
