--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ keywords = ['exasol', 'udf', 'script-languages']
 dependencies = [
 "exasol-script-languages-container-tool (>=3.3.0, <4.0.0)",
 "exasol-script-languages-container-ci (>=3.1.0, <4.0.0)",
-"exasol-script-languages-container-ci-setup (>=3.0.0)",
+"exasol-script-languages-container-ci-setup (>=3.0.0, <4.0.0)",
 ]
 
 
