--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
 name = "exasol-script-languages"
-version = "9.5.0"
+version = "9.6.0"
 description = "Script Languages"
 
 license = "MIT"
+
+requires-python = ">=3.10, <4.0"
 
 authors = [
     { name="Torsten Kilias", email="Torsten Kilias <torsten.kilias@exasol.com>" },
@@ -14,6 +16,14 @@ readme = 'README.md'  # Markdown files are supported
 
 keywords = ['exasol', 'udf', 'script-languages']
 
+
+dependencies = [
+"exasol-script-languages-container-tool (>=3.3.0, <4.0.0)",
+"exasol-script-languages-container-ci (>=3.1.0, <4.0.0)",
+"exasol-script-languages-container-ci-setup (>=3.0.0, <4.0.0)",
+]
+
+
 [tool.poetry]
 
 package-mode = false
@@ -23,18 +33,11 @@ repository = "https://github.com/exasol/script-languages"
 homepage = "https://github.com/exasol/script-languages"
 
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4"
-exasol-script-languages-container-tool = "^3.3.0"
-exasol-script-languages-container-ci = "^2.0.0"
-exasol-script-languages-container-ci-setup = "^2.0.2"
-
-
 [tool.poetry.group.dev.dependencies]
 toml = ">=0.10.2"
 gitpython = ">=3.1.0"
 nox = ">=2022.8.7"
 
 [build-system]
-requires = ["poetry_core>=2.0.0"]
+requires = ["poetry_core>=2.1.0"]
 build-backend = "poetry.core.masonry.api"
