Replace legacy swig python code with import statement

--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -2,7 +2,8 @@
 package(default_visibility = ["//visibility:public"])
 exports_files(["filter_swig_code.py", "build_integrated.py",
 	       "create_binary_wrapper.sh", "create_binary_wrapper_valgrind.sh",
-	       "create_binary_wrapper_valgrind_massif.sh", "exaudfclient.template.sh"])
+	       "create_binary_wrapper_valgrind_massif.sh", "exaudfclient.template.sh",
+	       "replace_swig_import_helper.py"])
 
 load("//:variables.bzl", "VM_ENABLED_DEFINES")
 
