1. Fixed encoding/decoding for legacy swig versions by implementing a new auto-generated python module for decoding/encoding 2. Remove replace_swig_import_helper.py 3. Fixed test in get_connection.py by removing usage of "encodeUTF8", which actually was used from the global namespace, and not the lambda in the UDF 4. Fixed missing decodings/encodings in exascript_python_preset_core.py and exascript_python_wrap.py 5. Fixed some errors in python_ext_dataframe.cc

--- a/exaudfclient/.bazelrc
+++ b/exaudfclient/.bazelrc
@@ -26,3 +26,4 @@ build:valgrind -c dbg
 build:valgrind --copt -g
 build:valgrind --strip=never
 build:valgrind --copt -DVALGRIND_ACTIVE
+build:swig-string-as-buffer --copt='-DSWIG_STRING_AS_BYTES_ENABLED=1' --action_env=SWIG_STRING_AS_BYTES_ENABLED=1
