--- a/flavors/template-Exasol-all-python-3.12/flavor_base/build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.12/flavor_base/build_run/Dockerfile
@@ -25,7 +25,7 @@ RUN mkdir /exaudfclient /exaudf
 COPY exaudfclient/ /exaudfclient/
 
 WORKDIR /exaudfclient/
-RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary"]
+RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary --config swig-string-as-buffer"]
 RUN cp -r -L bazel-bin/* /exaudf
 RUN rm -r /root/.cache/bazel #Delete bazel cache as it contains java rules with special characters which will cause a problem for Bucketfs
 
